Updating to flex box layout to better support ltr/rtl workflows. Also kills the direction prop. Also fixed was the permanent scrollbar offset issue.

--- a/packages/terra-data-grid/src/DataGrid.module.scss
+++ b/packages/terra-data-grid/src/DataGrid.module.scss
@@ -11,24 +11,26 @@
   }
 
   .header-container {
+    align-items: center;
     background-color: var(--terra-clinical-data-grid-column-header-background-color, lightgrey);
     border-bottom-color: var(--terra-clinical-data-grid-column-header-border-bottom-color, grey);
     border-bottom-style: var(--terra-clinical-data-grid-column-header-border-bottom-style, solid);
     border-bottom-width: var(--terra-clinical-data-grid-column-header-border-bottom-width, 1px);
+    display: flex;
     overflow: hidden;
     position: relative;
     width: 100%;
 
+
     .pinned-header {
       background-color: var(--terra-clinical-data-grid-column-header-background-color, lightgrey);
       display: flex;
+      flex: 0 0 auto;
       height: 100%;
-      left: 0;
-      position: absolute;
-      top: 0;
     }
 
     .header-overflow-container {
+      flex: 1 1 auto;
       height: calc(100% + 20px);
       margin-bottom: -20px;
       overflow-x: auto;
@@ -44,11 +46,17 @@
         top: 0;
       }
     }
+
+    .header-scrollbar-buffer {
+      flex: 0 0 auto;
+      height: 100%;
+    }
   }
 
   .vertical-overflow-container {
+    align-items: flex-start;
     background-color: var(--terra-clinical-data-grid-background-color, #ccc);
-
+    display: flex;
     height: 100%;
     overflow-x: hidden;
     overflow-y: auto;
@@ -57,8 +65,6 @@
   }
 
   .horizontal-overflow-container {
-    background-color: var(--terra-clinical-data-grid-background-color, #ccc);
-
     overflow-x: auto;
     overflow-y: hidden;
     padding-bottom: 20px;
@@ -67,16 +73,16 @@
   }
 
   .overflowed-content-container {
+    flex: 1 1 auto;
     overflow: hidden;
+    position: relative;
   }
 
   .pinned-content-container {
     box-shadow: var(--terra-clinical-data-grid-pinned-column-box-shadow, 3px 0 5px grey);
-    left: 0;
-    position: absolute;
-    top: 0;
-    transform: translateZ(0); // Necessary to correct variability with overflowed content interactions in Chrome
-    z-index: 100;
+    flex: 0 0 auto;
+    position: relative;
+    z-index: 1;
   }
 
   .section-header-container {
